(fix): Avoid CSS grid cells overflow on Pro channel list

--- a/src/app/modules/pro/channel/list/list.component.scss
+++ b/src/app/modules/pro/channel/list/list.component.scss
@@ -84,6 +84,11 @@ m-pro--channel-list {
     list-style: none;
     padding: 0;
 
+    > * {
+      min-width: 0;
+      min-height: 0;
+    }
+
     @media screen and (max-width: $max-mobile) {
       grid-template-columns: 100%;
     }
